--- a/NewsStudyRostelecom/host/templates/host/homebase.html
+++ b/NewsStudyRostelecom/host/templates/host/homebase.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load bootstrap5 %}
 
 
 <!DOCTYPE HTML>
@@ -7,6 +8,7 @@
 <title>{% block title %} Hosting Home {% endblock %}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
 <link href="{% static 'host/' %}css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="{% static 'host/' %}js/jquery-1.11.1.min.js"></script>
