Третий коммит, доделал slider(теперь картинки с серверами можно скролить), дополнил main  и собрал для теста рабочий шаблон home и залил папку news. Кнопка о нас в работе.

--- a/NewsStudyRostelecom/host/templates/host/foot.html
+++ b/NewsStudyRostelecom/host/templates/host/foot.html
@@ -39,8 +39,8 @@
 		</div>
 	</div>
 </div>
-<link href="css/flexslider.css" rel='stylesheet' type='text/css' />
-							  <script defer src="js/jquery.flexslider.js"></script>
+<link href="{% static 'host/' %}css/flexslider.css" rel='stylesheet' type='text/css' />
+							  <script defer src="{% static 'host/' %}js/jquery.flexslider.js"></script>
 							  <script type="text/javascript">
 								$(function(){
 								  SyntaxHighlighter.all();
