--- a/NewsStudyRostelecom/host/templates/host/header.html
+++ b/NewsStudyRostelecom/host/templates/host/header.html
@@ -4,12 +4,12 @@
 	<div class="container">
 		<div class="header_top">
 			<div class="logo">
-				<a href="index.html"><img src="{% static 'host/' %}images/logo.png" alt=""/></a>
+				<a href=""><img src="{% static 'host/' %}images/logo.png" alt=""/></a>
 			</div>
 			<div class="cssmenu">
 					<ul>
-						<li class="active"><a href="login.html">Войти</a></li>
-						<li><a href="register.html">Регистрация</a></li>
+						<li class="active"><a href="#">Войти</a></li>
+						<li><a href="#">Регистрация</a></li>
 					</ul>
 			</div>
 			<div class="clearfix"> </div>
