--- a/NewsStudyRostelecom/main/templates/main/sidebar.html
+++ b/NewsStudyRostelecom/main/templates/main/sidebar.html
@@ -10,69 +10,67 @@
 <!--скрипты ниже для работы выпадающего меню пользователя-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-<!--Тут начинается боковое меню-->
 
-<div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px;">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-       <img class="bi me-2" src="{% static 'main' %}/img/News_icon.png" width="40" height="50">
-      <span class="fs-4">Новостной портал</span>
-    </a>
-    <hr>
-    <ul class="nav nav-pills flex-column mb-auto">
-      <li class="nav-item">
-        <a href="#" class="nav-link active" aria-current="page">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
-          Home
-        </a>
-      </li>
-      <li>
-        <a href="#" class="nav-link link-dark">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
-          Dashboard
-        </a>
-      </li>
-      <li>
-        <a href="#" class="nav-link link-dark">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"/></svg>
-          Orders
-        </a>
-      </li>
-      <li>
-        <a href="#" class="nav-link link-dark">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
-          Products
-        </a>
-      </li>
-      <li>
-        <a href="#" class="nav-link link-dark">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-          Customers
-        </a>
-      </li>
-    </ul>
-    <hr>
-<!--Меню пользователя-->
-   <div class="dropdown">
-      <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
-        <!--Заменить логотип-->
-        <img src="#{% static 'main' %}/img/login.png"#" alt="" width="32" height="32" class="rounded-circle me-2">
-        <strong>Регистрация / Авторизация</strong>
-      </a>
-      <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
-        <li><a class="dropdown-item" href="#">New project...</a></li>
-        <li><a class="dropdown-item" href="#">Settings</a></li>
-        <li><a class="dropdown-item" href="#">Profile</a></li>
-        <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="#">Sign out</a></li>
-      </ul>
-    </div>
-  </div>
 
-<!-- Создание пользователя--
+<!--Сделано на основе примеров боковых меню с этой страницы: https://getbootstrap.com/docs/5.0/examples/sidebars/#-->
+
+
+    <aside>
+
+        <!--    Подробнее про flex-классы: https://bootstrap-4.ru/docs/4.0/utilities/flex/-->
+<!--            d-none d-lg-block | Такой класс позвоялет спрятать элементы при отображении на экранах размером меньше lg-->
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+              <img  src="{% static 'main' %}/img/News_icon.png" width="40" height="50">
+              <span class="fs-5 d-none d-lg-block responsive-title">Новости нашего города</span>
+            </a>
+            <hr>
+            <ul class="nav nav-pills flex-column mb-auto">
+              <li class="nav-item">
+                  <a href="/" {% if request.path  == '/' %} class="link-active" aria-current="page" {% endif %}>
+                      <i class="fa fa-house menu-icon {% if request.path  == '/' %} link-active {% endif %}" ></i>
+                      <div class="d-none d-lg-block">Главная</div>
+                  </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="/news/" {% if request.path  == '/news/' %} class="link-active" aria-current="page" {% endif %}>
+                    <i class="fa fa-bars menu-icon"></i> <div class="d-none d-lg-block">Все новости</div>
+                </a>
+              </li>
+                <li class="nav-item">
+                  <a href="/examples/" {% if request.path  == '/examples/' %} class="link-active" aria-current="page" {% endif %}>
+                        <i class="fa fa-hand menu-icon"></i>  <div class="d-none d-lg-block"> Примеры с урока</div>
+                    </a>
+              </li>
+            <li>
+                <a href="/home/" {% if request.path  == '/home/' %} class="link-active" aria-current="page" {% endif %}>
+                    <i class="fa fa-backward menu-icon""></i>  <div class="d-none d-lg-block">Адаптированный шаблон </div>
+                </a>
+              </li>
+              <li>
+                <a href="#" {% if request.path  == '/search/' %} class="link-active" aria-current="page" {% endif %}>
+                    <i class="fa fa-magnifying-glass menu-icon"></i>   <div class="d-none d-lg-block"> Поиск</div>
+
+                </a>
+              </li>
+              <li>
+                <a href="#" {% if request.path  == '/myarticles/' %} class="link-active" aria-current="page" {% endif %}>
+                    <i class="fa fa-pen-nib menu-icon"></i>  <div class="d-none d-lg-block"> Мои статьи</div>
+                </a>
+              </li>
+              <li>
+                <a href="#" {% if request.path  == '/about/' %} class="link-active" aria-current="page" {% endif %}>
+                  <i class="fa fa-handshake menu-icon"></i>  <div class="d-none d-lg-block"> О сайте</div>
+                </a>
+              </li>
+            </ul>
+            <hr>
+
+
             <div class="dropdown" >
               <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false" style="background:#212529;">
                 <img src="{% static 'main' %}/img/default.jpg" alt="" width="25" height="25" class="rounded-circle me-2">
-                <strong>Демо-пользователь</strong>
+                  <div class="d-none d-lg-block">Демо-пользователь</div>
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                 <li><a class="dropdown-item" href="#"> Создать статью</a></li>
@@ -80,10 +78,6 @@
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#"> Выход</a></li>
               </ul>
-            </div> -->
+            </div>
 
-
-      </div>
-
-
-</aside>
+    </aside>
