--- a/NewsStudyRostelecom/host/templates/host/about.html
+++ b/NewsStudyRostelecom/host/templates/host/about.html
@@ -1,5 +1,19 @@
 {% load static %}
 
+<div class="header">
+	<div class="container">
+		<div class="header_top">
+			<div class="logo">
+				<a href="about.html"><img src="{% static 'host/' %}images/logo.png" alt=""/></a>
+			</div>
+			<div class="cssmenu">
+					<ul>
+						<li class="active"><a href="login.html">Войти</a></li>
+						<li><a href="#">Регистрация</a></li>
+					</ul>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
 		<div class="h_menu4"><!-- start h_menu4 -->
 	        <a class="toggleMenu" href="#">Menu</a>
 				<ul class="nav">
@@ -13,8 +27,9 @@
 					<li><a href="#">Поддержка</a></li>
 					<li><a href="#">Контакты</a></li>
 				 </ul>
-				 <script type="text/javascript" src="js/nav.js"></script>
+				 <script type="{% static 'host/' %}text/javascript" src="{% static 'host/' %}js/nav.js"></script>
 	      </div><!-- end h_menu4 -->
      </div>
 </div>
+
 
