--- a/NewsStudyRostelecom/host/templates/host/body.html
+++ b/NewsStudyRostelecom/host/templates/host/body.html
@@ -107,51 +107,6 @@
 		</div>
 	</div>
 </div>
-<!--<div class="features">
-	<div class="container">
-		<div class="col-md-4">
-		   <h4 class="tz-title-4 tzcolor-blue">
-             <p class="tzweight_Bold m_2"><span class="m_1">Now<br></span>What is Hot</p>
-          </h4>
-          <ul class="offer">
-             <li><p class="m_3"><span class="m_4">Get Up to<br></span>50%</p></li>
-             <li><p class="m_5">Off</p></li>
-             <li class="last"><p class="m_6"><span class="m_7">Each<br></span>Hosting</p></li>
-          </ul>
-        </div>
-		<div class="col-md-8 row_1">
-		    <h4 class="tz-title-4 tzcolor-blue">
-             <p class="tzweight_Bold m_2"><span class="m_1">Our<br></span>Features</p>
-           </h4>
-		   <div class="section_1">
-			<div class="col_1_of_3 span_1_of_3">
-				<div class="list_1">
-		            <ul>
-		              <li><a href="">Lorem ipsum is simply.</a></li>
-		              <li><a href="">It is a long established.</a></li>
-		              <li><a href="">The standard chunk.</a></li>
-		              <li><a href="">Therefore always free</a></li>
-		            </ul>
-		        </div>
-			</div>
-			<div class="col_1_of_3 span_1_of_3">
-				<div class="list_1">
-		            <ul>
-		              <li><a href="">Voluptatem accusan.</a></li>
-		              <li><a href="">Ipsum generatortss.</a></li>
-		              <li><a href="">Lorem ipsum is simply.</a></li>
-		              <li><a href="">It is a long established.</a></li>
-		            </ul>
-		        </div>
-			</div>
-			<div class="col_1_of_3 span_1_of_3">
-				<a class="but1" href="#">View All</a>
-			</div>
-			<div class="clearfix"> </div>
-		   </div>
-		</div>
-	</div>
-</div>  -->
 <div class="price">
 	<div class="container">
 		<h4 class="tz-title-4 tzcolor-blue">
@@ -174,23 +129,23 @@
 									<div class="pop_up">
 									 	<div class="payment-online-form-left">
 											<form>
-												<h4><span class="shipping"> </span>Shipping</h4>
+												<h4><span class="shipping"> </span>Заказ</h4>
 												<ul>
-													<li><input class="text-box-dark" type="text" value="Frist Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Frist Name';}"></li>
-													<li><input class="text-box-dark" type="text" value="Last Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Last Name';}"></li>
+													<li><input class="text-box-dark" type="text" value="Имя" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Frist Name';}"></li>
+													<li><input class="text-box-dark" type="text" value="Фамилия" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Last Name';}"></li>
 												</ul>
 												<ul>
 													<li><input class="text-box-dark" type="text" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}"></li>
-													<li><input class="text-box-dark" type="text" value="Company Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Company Name';}"></li>
+													<li><input class="text-box-dark" type="text" value="Компания" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Company Name';}"></li>
 												</ul>
 												<ul>
-													<li><input class="text-box-dark" type="text" value="Phone" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Phone';}"></li>
-													<li><input class="text-box-dark" type="text" value="Address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Address';}"></li>
+													<li><input class="text-box-dark" type="text" value="Телефон" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Phone';}"></li>
+													<li><input class="text-box-dark" type="text" value="Адрес" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Address';}"></li>
 													<div class="clearfix"> </div>
 												</ul>
 												<div class="clear"> </div>
 											<ul class="payment-type">
-												<h4><span class="payment"> </span> Payments</h4>
+												<h4><span class="payment"> </span> Оплата</h4>
 												<li>
 													<span class="col_checkbox">
 													<input id="3" class="css-checkbox1" type="checkbox">
@@ -208,18 +163,18 @@
 												<div class="clearfix"> </div>
 											</ul>
 												<ul>
-													<li><input class="text-box-dark" type="text" value="Card Number" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Card Number';}"></li>
-													<li><input class="text-box-dark" type="text" value="Name on card" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name on card';}"></li>
+													<li><input class="text-box-dark" type="text" value="Номер карты" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Card Number';}"></li>
+													<li><input class="text-box-dark" type="text" value="Название карты" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name on card';}"></li>
 													<div class="clearfix"> </div>
 												</ul>
 												<ul>
-													<li><input class="text-box-light hasDatepicker" type="text" id="datepicker" value="Expiration Date" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Expiration Date';}"><em class="pay-date"> </em></li>
-													<li><input class="text-box-dark" type="text" value="Security Code" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Security Code';}"></li>
+													<li><input class="text-box-light hasDatepicker" type="text" id="datepicker" value="Дата" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Expiration Date';}"><em class="pay-date"> </em></li>
+													<li><input class="text-box-dark" type="text" value="Код" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Security Code';}"></li>
 													<div class="clearfix"> </div>
 												</ul>
 												<ul class="payment-sendbtns">
-													<li><input type="reset" value="Cancel"></li>
-													<li><input type="submit" value="Process order"></li>
+													<li><input type="reset" value="Отмена"></li>
+													<li><input type="submit" value="Оформить"></li>
 												</ul>
 												<div class="clearfix"> </div>
 											</form>
