--- a/NewsStudyRostelecom/news/templates/news/index.html
+++ b/NewsStudyRostelecom/news/templates/news/index.html
@@ -12,9 +12,9 @@
              <div class="single_news">
                 <div class="p-4 p-md-5 text-white rounded bg-dark" >
                         <div class="col-md-6 px-0">
-                          <h1 class="display-4 fst-italic">Последняя новость</h1>
-                          <p class="lead my-3">Начало новости, для продолжения чтения нужно пройти по ссылки ниже</p>
-                          <p class="lead mb-0"><a href="#" class="text-white fw-bold">Полный текст...</a></p>
+                          <h1 class="display-4 fst-italic"> {{ article.title }}</h1>
+                          <p class="lead my-3">{{ article.anouncement }}</p>
+                          <p class="lead mb-0"><a href="{{ article.get_absolute_url }}" class="text-white fw-bold">Полный текст...</a></p>
                         </div>
                   </div>
             </div>
