Добавил страницу about/, доработал "ВЫГОДНЫЕ ПРЕДЛОЖЕНИЯ"  они кликабельны, можно выбрать план и заполнить форму (форма еще не готова)

--- a/NewsStudyRostelecom/host/templates/host/sidebar.html
+++ b/NewsStudyRostelecom/host/templates/host/sidebar.html
@@ -3,10 +3,10 @@
 		<div class="h_menu4"><!-- start h_menu4 -->
 	        <a class="toggleMenu" href="#">Menu</a>
 				<ul class="nav">
-					<li class="active"><a href="#">Главная страница</a></li>
-					<li><a href="/about">О нас</a></li>
+					<li class="active"><a href="/host">Главная страница</a></li>
+					<li><a href="about">О нас</a></li>
 					<li><a href="#">Сервисы</a></li>
-					<li><a href="#">Планы Хостинга</a></li>
+					<li><a href="plans">Планы Хостинга</a></li>
 					<li><a href="#">Домены</a></li>
 					<li><a href="#">FAQ</a></li>
 					<li><a href="#">Блог</a></li>
