--- a/NewsStudyRostelecom/host/templates/host/about.html
+++ b/NewsStudyRostelecom/host/templates/host/about.html
@@ -1,35 +1,158 @@
 {% load static %}
+{% include 'host/header.html' %}
+{% include 'host/sidebar.html' %}
 
-<div class="header">
-	<div class="container">
-		<div class="header_top">
-			<div class="logo">
-				<a href="about.html"><img src="{% static 'host/' %}images/logo.png" alt=""/></a>
-			</div>
-			<div class="cssmenu">
-					<ul>
-						<li class="active"><a href="login.html">Войти</a></li>
-						<li><a href="#">Регистрация</a></li>
-					</ul>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-		<div class="h_menu4"><!-- start h_menu4 -->
-	        <a class="toggleMenu" href="#">Menu</a>
-				<ul class="nav">
-					<li class="active"><a href="#">Главная страница</a></li>
-					<li><a href="/about">О нас</a></li>
-					<li><a href="#">Сервисы</a></li>
-					<li><a href="#">Планы Хостинга</a></li>
-					<li><a href="#">Домены</a></li>
-					<li><a href="#">FAQ</a></li>
-					<li><a href="#">Блог</a></li>
-					<li><a href="#">Поддержка</a></li>
-					<li><a href="#">Контакты</a></li>
-				 </ul>
-				 <script type="{% static 'host/' %}text/javascript" src="{% static 'host/' %}js/nav.js"></script>
-	      </div><!-- end h_menu4 -->
-     </div>
+<html>
+<head>
+<title>{% block title %} Hosting Home {% endblock %}</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+<link href="{% static 'host/' %}css/bootstrap.css" rel='stylesheet' type='text/css' />
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="{% static 'host/' %}js/jquery-1.11.1.min.js"></script>
+<!-- Custom Theme files -->
+<link href="{% static 'host/' %}css/style.css" rel='stylesheet' type='text/css' />
+<!-- Custom Theme files -->
+<!-- webfonts -->
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
+<!-- webfonts -->
+<!-- Add fancyBox main JS and CSS files -->
+<script src="{% static 'host/' %}js/jquery.magnific-popup.js" type="text/javascript"></script>
+<link href="{% static 'host/' %}css/popup.css" rel="stylesheet" type="text/css">
+		<script>
+			$(document).ready(function() {
+				$('.popup-with-zoom-anim').magnificPopup({
+					type: 'inline',
+					fixedContentPos: false,
+					fixedBgPos: true,
+					overflowY: 'auto',
+					closeBtnInside: true,
+					preloader: false,
+					midClick: true,
+					removalDelay: 300,
+					mainClass: 'my-mfp-zoom-in'
+			});
+		});
+		</script>
+</head>
+<body>
+<!--  Класс для разделителя между head и body -->
+<div class="about">
+	 <div class="container">
+		<h1>О нас</h1>
+	</div>
 </div>
 
 
+
+<div class="default">
+            <div class="default__inner">
+                <div class="static-block">
+                    <div class="container">
+                        <div class="static-block__inner static">
+                            <p>
+                                Hosting - это первая компания на рынке российского хостинга, предоставляющая услуги по
+                                системе “Все включено”.
+                                Мы построили работу таким образом, чтобы у наших клиентов не было необходимости
+                                разбираться в тонкостях настроек сервера, а всю работу выполняли наши специалисты.</p>
+
+                            <p> С самого основания в 2015 году мы продолжаем развиваться и становиться лучше для наших
+                                клиентов.
+                                За это время мы открыли новые направления и улучшили качество наших услуг.
+                                Сегодня наша команда состоит из более 10 настоящих профессионалов, каждый из которых
+                                вносит свой вклад
+                                в развитие наших услуг, чтобы Вы могли размещать свои сайты и знать, что они будут
+                                работать максимально хорошо.</p>
+
+                            <p> На сегодняшний день в нашей компании <b>25 000+ сайтов на обслуживании и 9 000+ клиентов.</b>
+                            </p>
+
+                            <h3>
+                                Что мы делаем
+                            </h3>
+                            <p>
+                                Наша основная специализация - это аренда VPS серверов в России, Германии, Беларуси, Нидерландах и Казахстане.
+                                Мы отладили работу до безупречности и уверены в качестве наших услуг на 100%. При этом
+                                VPS серверы -
+                                не единственная наша услуга. Помимо VPS/VDS серверов нашим клиентам доступен виртуальный
+                                хостинг,
+                                выделенные физические серверы, регистрация доменных имен и многие другие услуги.
+
+                            </p>
+
+                            <h3>
+                                Философия
+                            </h3>
+                            <p>
+                                Мы поставили своей целью сделать максимально открытый хостинг без скрытых платежей и с
+                                максимальным включенным
+                                пакетом необходимых услуг. В первую очередь, это касается системного администрирования,
+                                без которого нельзя
+                                предоставлять услуги виртуального хостинга, VPS/VDS и выделенного сервера. Мы твердо
+                                убеждены, что аренда
+                                VPS сервера невозможна без грамотной консультации и квалифицированной техподдержки,
+                                поэтому создали первый
+                                на рынке СНГ премиум хостинг по системе <b>“Все включено!”</b>, в котором клиентам не
+                                приходится платить за такие
+                                базовые, но совершенно необходимые услуги, дополнительно.
+                            </p>
+                            <p>
+                                Мы предоставляем сервис, с которым Вам не нужно проводить работы по администрированию
+                                самостоятельно: ни перенос сайтов,
+                                ни решение внезапной проблемы. И Вам не придется доплачивать за услуги системного
+                                администрирования.
+                                При этом стоимость наших услуг совсем незначительно отличается от средней цены на рынке.
+                            </p>
+                            <h3>
+                                Наше оборудование
+                            </h3>
+
+                            <p>
+                                Мы уделяем особенное внимание безопасности данных. Все данные резервируются в нескольких
+                                направлениях
+                                и в разные дата-центры. Мы бесплатно выделяем место для резервных копий и так же
+                                бесплатно помогаем настроить резервное копирование.
+
+                            </p>
+
+                            <p>
+                                Все российские серверы располагаются в уникальном ЦОД уровня Tier 3+ в Москве с мощной
+                                защитой и высокой скоростью загрузки.
+                                Мы регулярно обновляем наше серверное оборудование и на всех серверах устанавливаем
+                                только новое и самое последнее ПО, что дает
+                                нам возможность гарантировать аптайм 99,98%. Все зарубежные локации расположены также в
+                                ЦОД уровня Tier 3+.
+                            </p>
+
+
+
+                            <h3>
+                                Наши клиенты
+                            </h3>
+                            <p>
+                                Среди наших клиентов самые разнообразные компании и частные лица, и очень большой
+                                процент интернет-магазинов. Мы готовы выполнить требования
+                                для абсолютно любого проекта, независимо от уровня его сложности. Для владельцев
+                                интернет-магазинов особенно важна стабильность и работоспособность
+                                их сайтов, ведь от этого напрямую зависит количество продаж.
+                            </p>
+
+                            <p>
+                                Мы постоянно стараемся повышать качество наших услуг и, если у Вас есть какие-либо
+                                предложения или замечания, мы будем рады, если Вы нам о них напишете. Вы поможете нам
+                                стать лучше!
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+</body>
+
+{% include 'host/foot.html' %}
