Добавил страницу раздел Планы Хостинга, можно выбрать нужный тариф. Добавил регистрацию пользователя (она иногда выпадает в 500 ошибку) В работе 404 страница.

--- a/NewsStudyRostelecom/host/templates/host/about.html
+++ b/NewsStudyRostelecom/host/templates/host/about.html
@@ -52,7 +52,7 @@
                     <div class="container">
                         <div class="static-block__inner static">
                             <p>
-                                Hosting - это первая компания на рынке российского хостинга, предоставляющая услуги по
+                             <p>   Hosting - это первая компания на рынке российского хостинга, предоставляющая услуги по
                                 системе “Все включено”.
                                 Мы построили работу таким образом, чтобы у наших клиентов не было необходимости
                                 разбираться в тонкостях настроек сервера, а всю работу выполняли наши специалисты.</p>
@@ -66,7 +66,7 @@
                                 работать максимально хорошо.</p>
 
                             <p> На сегодняшний день в нашей компании <b>25 000+ сайтов на обслуживании и 9 000+ клиентов.</b>
-                            </p>
+                            </p>  </p>
 
                             <h3>
                                 Что мы делаем
