--- a/NewsStudyRostelecom/host/templates/host/header.html
+++ b/NewsStudyRostelecom/host/templates/host/header.html
@@ -9,7 +9,7 @@
 			<div class="cssmenu">
 					<ul>
 						<li class="active"><a href="#">Войти</a></li>
-						<li><a href="#">Регистрация</a></li>
+						<li><a href="signin">Регистрация</a></li>
 					</ul>
 			</div>
 			<div class="clearfix"> </div>
