--- a/NewsStudyRostelecom/host/templates/host/sidebar.html
+++ b/NewsStudyRostelecom/host/templates/host/sidebar.html
@@ -4,9 +4,9 @@
 	        <a class="toggleMenu" href="#">Menu</a>
 				<ul class="nav">
 					<li class="active"><a href="/host">Главная страница</a></li>
-					<li><a href="about">О нас</a></li>
+					<li><a href="{% url 'about' %}">О нас</a></li>
 					<li><a href="#">Сервисы</a></li>
-					<li><a href="plans">Планы Хостинга</a></li>
+					<li><a href="{% url 'plans' %}">Планы Хостинга</a></li>
 					<li><a href="#">Домены</a></li>
 					<li><a href="#">FAQ</a></li>
 					<li><a href="#">Блог</a></li>
