обновил страницу /plans + обновил /404

--- a/NewsStudyRostelecom/host/templates/host/plans.html
+++ b/NewsStudyRostelecom/host/templates/host/plans.html
@@ -36,12 +36,16 @@
 		});
 		</script>
 </head>
-
-<div class="price">
-	<div class="container">
-		<h4 class="tz-title-4 tzcolor-blue">
-            <p class="tzweight_Bold"><span class="m_1">ВЫГОДНЫЕ<br></span>предложения</p>
-        </h4>
+<div class="about">
+	 <div class="container">
+		<h1>ВЫГОДНЫЕ<span class="m_1"><br>предложения</span></h1>
+	</div>
+</div>
+	<div class="default">
+            <div class="default__inner">
+                <div class="static-block">
+                    <div class="container">
+                        <div class="static-block__inner static">
 		    <div class="col-md-3">
 							<div class="pricing-table-grid">
 								<h3><span class="rubble">$</span>5<br><span class="month">В месяц</span></h3>
