Исправил в urls.py корневую ссылку в (при запуске проект ведет сразу на главную /host)

--- a/NewsStudyRostelecom/host/templates/host/foot.html
+++ b/NewsStudyRostelecom/host/templates/host/foot.html
@@ -9,9 +9,9 @@
 		<div class="col-md-3 box_2">
 			<h4>Основные страницы</h4>
 			<ul class="list_2">
-				<li class="active"><a href="/host">Главная страница</a></li>
+				<li class="active"><a href="/">Главная страница</a></li>
 					<li><a href="about">О нас</a></li>
-					<li><a href="service.">Сервисы</a></li>
+					<li><a href="#">Блог</a></li>
 					<li><a href="support.html">Поддержка</a></li>
 					<li><a href="contact.html">Контакты</a></li>
 
