--- a/NewsStudyRostelecom/host/templates/host/sidebar.html
+++ b/NewsStudyRostelecom/host/templates/host/sidebar.html
@@ -3,7 +3,7 @@
 		<div class="h_menu4"><!-- start h_menu4 -->
 	        <a class="toggleMenu" href="#">Menu</a>
 				<ul class="nav">
-					<li class="active"><a href="/host">Главная страница</a></li>
+					<li class="active"><a href="/">Главная страница</a></li>
 					<li><a href="{% url 'about' %}">О нас</a></li>
 					<li><a href="#">Сервисы</a></li>
 					<li><a href="{% url 'plans' %}">Планы Хостинга</a></li>
